--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family:sans-serif;
+  font-family: sans-serif;
   line-height: 1.5;
 }
 
@@ -25,6 +25,19 @@ img {
   background-color: #8bc9d9;
   border-top: 3px solid #005e76;
   color: #005e76;
+}
+
+.footer ul {
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer a {
+  color: #003442;
+}
+
+.social {
+  display: flex;
 }
 
 .social > li {
